HelloUltraviolet/Fixtures/AcceptedProjects/CrossAssemblyImplementation/Source/CrossAssemblyImplementation/Library.uv
//! Accepted fixture for cross-assembly class implementation.

public import ExternalContracts

public record LocalImplementation <: ExternalContracts::ExternalRequiredClass {
    public required_value: i32
}

public enum LocalEnumImplementation <: ExternalContracts::ExternalMarkerClass {
    Ready
}

public modal LocalModalImplementation <: ExternalContracts::ExternalMarkerClass {
    @Ready {}
}

public procedure crossAssemblyImplementationValue() -> i32 {
    let item = LocalImplementation { required_value: 42 }
    let choice: LocalEnumImplementation = LocalEnumImplementation::Ready
    let state: LocalModalImplementation = widen LocalModalImplementation@Ready {}
    let enum_implementation_ok: bool = if choice is {
        LocalEnumImplementation::Ready {
            true
        }
    }
    let modal_implementation_ok: bool = if state is {
        @Ready {
            true
        }
    }
    if enum_implementation_ok && modal_implementation_ok {
        return item.required_value
    }

    return 0
}
