HelloUltraviolet/Fixtures/RejectedSource/Statements/LetAnnotationMismatch/Source/Main.uv
//! Rejected statement specimen for annotated let initializer type mismatch.

public procedure letAnnotationMismatchReference() -> i32 {
    let value: i32 = true
    return 0
}
